[gd_scene load_steps=10 format=3 uid="uid://ducpy811dpdsi"]

[ext_resource type="Script" path="res://actors/Players/Shield/shield.gd" id="1_apuik"]
[ext_resource type="Texture2D" uid="uid://t2kwkd2tmf3x" path="res://Assets/Shield/Shield_Full.png" id="1_mm7ge"]
[ext_resource type="Texture2D" uid="uid://dertkcf8f4r4e" path="res://Assets/Shield/Energy Bar/Energy_Bar.png" id="2_t0ft4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_j51pn"]
radius = 19.0

[sub_resource type="Animation" id="Animation_7qes4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.607843)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.1, 0.1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_cgkuf"]
resource_name = "activate"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.607843), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.15, 0.15), Vector2(0.1, 0.1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_edd8v"]
resource_name = "Shield_Break"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.607843), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_viw0r"]
resource_name = "deactivate"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.607843), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.05, 0.05), Vector2(0.1, 0.1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vdp8g"]
_data = {
"RESET": SubResource("Animation_7qes4"),
"activate": SubResource("Animation_cgkuf"),
"damage": SubResource("Animation_edd8v"),
"deactivate": SubResource("Animation_viw0r")
}

[node name="Shield" type="Area2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_apuik")
max_hit_points = 1
recovery_rate = 5

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.607843)
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_mm7ge")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["enemies"]]
shape = SubResource("CircleShape2D_j51pn")
disabled = true

[node name="ShieldAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vdp8g")
}
playback_auto_capture = false

[node name="RecoveryTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="HealthBar" type="TextureProgressBar" parent="."]
layout_direction = 2
offset_left = -29.0
offset_top = 21.0
offset_right = 28.0
offset_bottom = 31.0
value = 100.0
texture_progress = ExtResource("2_t0ft4")
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="RecoveryTimer" to="." method="_on_recovery_timer"]
